[package]
name = "blur-lua-loader"
version = "0.1.3"
edition = "2021"


[lib]
name = "lua_hooks"
crate-type = ["cdylib"]


[dependencies]
blur-plugins-core = { git = "https://github.com/tobii-dev/blur-plugins-core" }

log = { version = "0.4.20", features = ["release_max_level_info"] }
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
simplelog = "0.12.1"
colored = "2.0.4"
cstr = "0.2.11"

mlua-sys = { version = "0.3.2", features = ["lua51", "module"] }
windows = { version = "0.51.1", features = ["Win32_Foundation", "Win32_System_Memory", "Win32_System_LibraryLoader"] }
